<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/image"
            android:scaleType="centerCrop"
            android:src="@drawable/person"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@id/image"
            android:textSize="20sp"
            android:id="@+id/name"
            android:layout_marginBottom="10dp"
            android:text="@string/name"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/divider"
            android:layout_below="@id/name"
            android:background="@color/black"
            />


        <RelativeLayout
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/divider">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/track"
                android:textSize="20sp"
                android:text="@string/track"/>
            
            <TextView
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/track"
                android:layout_marginStart="30dp"
                android:id="@+id/track_name"
                android:text="@string/track_name"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_below="@id/track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/country"
                android:textSize="20sp"
                android:text="@string/country"/>

            <TextView
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/track_name"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/country"
                android:layout_marginStart="30dp"
                android:id="@+id/country_name"
                android:text="@string/country_name"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_below="@id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:textSize="20sp"
                android:text="@string/email"/>

            <TextView
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_marginTop="20dp"
                android:layout_below="@id/country_name"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/email"
                android:layout_marginStart="30dp"
                android:id="@+id/email_address"
                android:text="@string/email_address"/>

            <TextView
                android:layout_below="@id/email"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/contact"
                android:textSize="20sp"
                android:text="@string/contact"/>

            <TextView
                android:layout_below="@id/email_address"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/contact"
                android:layout_marginStart="30dp"
                android:id="@+id/phone"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/number"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_below="@id/contact"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/slack_username"
                android:textSize="20sp"
                android:text="@string/slack"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_below="@id/phone"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/slack_username"
                android:layout_marginStart="30dp"
                android:id="@+id/slack"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/slack_username"/>


        </RelativeLayout>

    </RelativeLayout>




</ScrollView>