<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:layout_marginTop="25dp"
        android:textColor="@color/black"
        android:text="@string/title"
        android:gravity="center_horizontal"/>
    
    
    
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:gravity="center">
       
       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:onClick="about"
           android:textAllCaps="true"
           android:textSize="22sp"
           android:id="@+id/about"
           android:background="@drawable/btn_bg"
           android:text="@string/about_alc"
           android:padding="25dp"/>


       <Button
           android:layout_marginTop="30dp"
           android:layout_below="@id/about"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:onClick="profile"
           android:textAllCaps="true"
           android:textSize="22sp"
           android:background="@drawable/btn_bg"
           android:text="@string/my_profile"
           android:padding="25dp"/>
       
   </RelativeLayout>

</LinearLayout>